# materials_directory

./: .env.sample  README.md  db_backup.json  materials.xlsx  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py
